2026-06-11 Fix Flex Overflow Bug

--- a/styles.css
+++ b/styles.css
@@ -474,10 +474,4 @@ li {
     opacity: 0.5;
     }
 
-    .flex-container {
-        display: block;
-        height: auto;
-        min-height: 100vh;
-    }
-
 }
